modificaciones en la vista y arrancamos con el Home

--- a/style/style.css
+++ b/style/style.css
@@ -89,6 +89,18 @@ justify-content: center;
 }
 
 
+
+/*-----------HOME-------------------*/
+.mainHome{
+    height: 900px;
+    width: 100%;
+    background: linear-gradient(to right, #659999, #f4791f);
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+
 /*-------------LOGIN---------------*/
 .mainLogin{
     text-align: center;
