--- a/style/style.css
+++ b/style/style.css
@@ -6,8 +6,8 @@
 }
 
 .bodyLogin{
-    height: calc(100vh - 70px);
-    overflow: hidden;
+    /* height: calc(100vh - 70px); */
+    /* overflow: hidden; */
 }
 
 /*-------------HEADER---------------*/
@@ -60,8 +60,12 @@ header nav ul{
     height: 70px;
     display: flex;
     flex-direction: row;
-justify-content: center;
+    justify-content: center;
     background-color: rgb(112, 112, 112);
+
+    position: fixed;
+    bottom: 0%;
+    width: 100%;
 }
 
 .listaFooter{
@@ -70,7 +74,7 @@ justify-content: center;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .listaFooter li{
