--- a/style/style.css
+++ b/style/style.css
@@ -62,7 +62,6 @@ header nav ul{
     flex-direction: row;
     justify-content: center;
     background-color: rgb(112, 112, 112);
-
     width: 100%;
 }
 
@@ -218,6 +217,7 @@ header nav ul{
     padding: 90px 0 90px 0px;
     background-image: url(../img/fondoLogin.jpg);
 	background-size: cover;
+    height: calc(100vh - 250px);
 
 }
 
@@ -365,3 +365,29 @@ header nav ul{
     background-color: rgba(129, 5, 129, 0.651);
     border-radius: 15px;
 }
+
+
+/*------------------Setting Admin--------------------*/
+.mainSettingAdmin{
+    height: calc(100vh - 140px);
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    text-align: center;
+    background: linear-gradient(to right, #659972, #f6ff79);
+}
+
+
+.formSettingAdmin{
+    padding-top: 2%;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 20%;
+    justify-content: space-evenly;
+}
+
+.formSettingAdmin button{
+    width: 33%;
+}
+
