--- a/src/components/login/LoginForm.module.css
+++ b/src/components/login/LoginForm.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #E5E5E5;
+    border-radius: 15px;
 }
 
 h1{
@@ -17,6 +18,7 @@ h1{
     box-shadow: 2px 2px 5px rgb(131, 164, 167);
     display: flex;
     align-items: end;
+    
 }
 
 .field{
