--- a/src/components/login/NewUserForm.module.css
+++ b/src/components/login/NewUserForm.module.css
@@ -80,7 +80,16 @@ h1{
     border-color: #5b9e96;
 }
 
+.action button:disabled{
+    cursor: no-drop;
+}
+
 .action a:hover, .action a:active {
     background-color: #5b9e96;
     border-color: #5b9e96;
+}
+
+.failAlert{
+    color: red;
+    background-color: pink;
 }
