Lista de actividades en Home

--- a/src/components/homePage/Planes.module.css
+++ b/src/components/homePage/Planes.module.css
@@ -24,15 +24,15 @@
   border-radius: 15px;
 }
 
-.image{
+.plan_image{
   background-color: white;
 }
 
-p{
+.planes_p{
   margin: 0%;
 }
 
-h3{
+.planes_h3{
   margin: 0%;
   margin-left: 1em;
   margin-right: 1em;
