--- a/src/components/homePage/Actividades.module.css
+++ b/src/components/homePage/Actividades.module.css
@@ -1,3 +1,32 @@
 .actividades_section{
-  
+  margin-top: 3rem;
+  width: 100%;
+  background-color: #EDEDED;
+  border-radius: 15px;   
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
+
+.actividades_section h2{
+  text-align: initial;
+  margin: 0.5rem;
+}
+
+.actividades_section img{
+  border-radius: 15px;
+}
+
+.actividades_list{
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.actividad{
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+  background-color: #BFE0DC;
+  border-radius: 15px;
+}
+
