Estilizado pagina de activacion

--- a/src/components/actividadesPage/ActividadesList.module.css
+++ b/src/components/actividadesPage/ActividadesList.module.css
@@ -13,3 +13,10 @@
 .section_actividades > section img{
   height: 10rem;
 }
+
+h1{
+  background-color: #FFCC81;
+  width: fit-content;
+  padding: 1rem;
+  border-radius: 15px;
+}
