--- a/src/components/accountActivation/activationSucces.module.css
+++ b/src/components/accountActivation/activationSucces.module.css
@@ -1,5 +1,20 @@
 .activationMessage{
-    border: 3px solid black;
-    border-radius: 15px;
-    background-color: #E5E5E5;
+  border: 3px solid black;
+  border-radius: 15px;
+  background-color: #E5E5E5;
+  max-width: 40rem;
+}
+
+.activationMessage img{
+  max-width: 7rem;
+  margin-top: 1rem;
+}
+
+.activacionText{
+  margin: 1rem;
+}
+
+.activacionText p{
+  color: red;
+  font-weight: bold;
 }
