--- a/src/components/actividadesPage/Actividad.module.css
+++ b/src/components/actividadesPage/Actividad.module.css
@@ -1,6 +1,20 @@
-.reserva-Section{
-  background-color: black;
-  opacity: 0.5;
-  height: 100px;
-  width: 100px;
+.reserva_Section{
+  /* background-color: #000000; */
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reserva_Display{
+  height: 70%;
+  width: 70%;
+  background-color: rgba(237, 237, 237, 1);
+  position: absolute;
+  opacity: 1;
 }
