--- a/src/components/actividadesPage/Actividad.module.css
+++ b/src/components/actividadesPage/Actividad.module.css
@@ -13,8 +13,12 @@
 
 .reserva_Display{
   height: 70%;
-  width: 70%;
+  width: 50%;
   background-color: rgba(237, 237, 237, 1);
   position: absolute;
-  opacity: 1;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
