Listado de planes

--- a/src/components/planes/PlanList.module.css
+++ b/src/components/planes/PlanList.module.css
@@ -13,6 +13,11 @@
   width: 45%;
   margin-top: 1rem;
   border-radius: 15px;
+  cursor: pointer;
+}
+
+.singlePlan:hover{
+  background-color: #E8A94A;
 }
 
 .plan_image{
