--- a/src/components/actividadesPage/Actividad.module.css
+++ b/src/components/actividadesPage/Actividad.module.css
@@ -22,3 +22,24 @@
   justify-content: center;
   align-items: center;
 }
+
+.section_horarios{
+  width: 50%;
+  background-color: rgba(207, 207, 207, 1);
+  border: 0.1rem black solid;
+  border-radius: 1rem;
+}
+
+.horario_radio{
+  margin-bottom: 0.5rem;
+}
+
+.boton{
+  font: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  border-radius: 15px;
+  border-color: unset;
+  font-weight: bold;
+  margin-right: 2rem;
+}
