--- a/src/components/user/Pagos/User_Pagos.module.css
+++ b/src/components/user/Pagos/User_Pagos.module.css
@@ -6,3 +6,11 @@
   padding: 0.5rem;
   width: 60%;
 }
+
+.pago_card{
+  width: 60%;
+  background-color: rgba(207, 207, 207, 1);
+  border: 0.1rem black solid;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
