--- a/src/components/actividadesPage/Actividad.module.css
+++ b/src/components/actividadesPage/Actividad.module.css
@@ -41,5 +41,6 @@
   border-radius: 15px;
   border-color: unset;
   font-weight: bold;
-  margin-right: 2rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
