--- a/src/components/user/UserEdit/UserEditInfo.module.css
+++ b/src/components/user/UserEdit/UserEditInfo.module.css
@@ -1,7 +1,8 @@
 .editSection{    
-  background-color: #EDEDED;
+  background-color: rgba(237, 237, 237, 1);
   width: 50%;
   padding: 1rem;
+  border: 0.1rem black solid;
   border-radius: 15px;
 }
 
@@ -27,16 +28,28 @@
 }
 
 .editButtons button{
-  padding: 0.5rem 2rem;
+  font: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
   border-radius: 15px;
+  border-color: unset;
   font-weight: bold;
-  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .btnGuardar{
-  background-color: #96D295;
+  background-color: rgba(150, 210, 149, 1);
 }
 
 .btnCancelar{
-  background-color: #DF6C6C;
+  background-color: rgba(223, 108, 108, 1);
+}
+
+.btnGuardar:hover{
+  background-color: rgb(120, 167, 119);
+}
+
+.btnCancelar:hover{
+  background-color: rgb(167, 79, 79);
 }
