--- a/src/components/actividadesPage/Actividad.module.css
+++ b/src/components/actividadesPage/Actividad.module.css
@@ -25,7 +25,7 @@
 
 .section_horarios{
   width: 50%;
-  background-color: rgba(207, 207, 207, 1);
+  background-color: rgba(237, 237, 237, 1);
   border: 0.1rem black solid;
   border-radius: 1rem;
 }
@@ -37,10 +37,15 @@
 .boton{
   font: inherit;
   cursor: pointer;
+  background-color: rgba(122, 208, 198, 1);
   padding: 0.5rem 1.5rem;
   border-radius: 15px;
   border-color: unset;
   font-weight: bold;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
+}
+
+.boton:hover{
+  background-color: rgb(107, 177, 169);
 }
