--- a/src/components/planes/PagoPlan.module.css
+++ b/src/components/planes/PagoPlan.module.css
@@ -44,6 +44,18 @@
   color: red;
 }
 
-.confirmacion_botones{
-  margin-bottom: 1rem;
+.boton{
+  font: inherit;
+  cursor: pointer;
+  background-color: rgba(122, 208, 198, 1);
+  padding: 0.5rem 1.5rem;
+  border-radius: 15px;
+  border-color: unset;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.boton:hover{
+  background-color: rgb(107, 177, 169);
 }
