--- a/src/components/user/InicioUser.module.css
+++ b/src/components/user/InicioUser.module.css
@@ -5,7 +5,7 @@
 }
 
 .itemCard{
-  background-color: #BFE0DC;
+  background-color: rgba(122, 208, 198, 1);
   width: 35%;
   display: flex;
   align-items: center;
@@ -15,6 +15,9 @@
   border-radius: 15px;
   cursor: pointer;
 }
+.itemCard:hover{
+  background-color: rgb(107, 177, 169);
+}
 
 .itemCard img{
   width: 30%;
@@ -22,4 +25,20 @@
 
 .itemCard h3{
   width: 60%;
+}
+
+.boton{
+  font: inherit;
+  cursor: pointer;
+  background-color: rgba(122, 208, 198, 1);
+  padding: 0.5rem 1.5rem;
+  border-radius: 15px;
+  border-color: unset;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.boton:hover{
+  background-color: rgb(107, 177, 169);
 }
