--- a/src/components/user/UserInfo.module.css
+++ b/src/components/user/UserInfo.module.css
@@ -22,12 +22,31 @@
 }
 
 .userInfo section{
-  background-color: #BFE0DC;
+  background-color: rgba(237, 237, 237, 1);
+  border: 0.1rem black solid;
   width: 70%;
   padding: 1rem;
   border-radius: 15px;
 }
 
 .userEdit{
-  width: 100%;
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+}
+
+.boton{
+  font: inherit;
+  cursor: pointer;
+  background-color: rgba(122, 208, 198, 1);
+  padding: 0.5rem 1.5rem;
+  border-radius: 15px;
+  border-color: unset;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.boton:hover{
+  background-color: rgb(107, 177, 169);
 }
