--- a/src/components/admin/admin.module.css
+++ b/src/components/admin/admin.module.css
@@ -7,3 +7,26 @@
 .admin_menu button{
   margin-top: 2rem;
 }
+
+button{
+  font: inherit;
+  cursor: pointer;
+  background-color: rgba(122, 208, 198, 1);
+  padding: 0.5rem 1.5rem;
+  border-radius: 15px;
+  border-color: unset;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+button:hover{
+  background-color: rgb(107, 177, 169);
+}
+
+select{
+  background-color: rgba(255, 204, 129, 1);
+  padding: 0.5rem;
+  border-radius: 1rem;
+  font-weight: bold;
+}
