--- a/src/components/user/Pagos/User_Pagos.module.css
+++ b/src/components/user/Pagos/User_Pagos.module.css
@@ -13,6 +13,8 @@
   border: 0.1rem black solid;
   border-radius: 1rem;
   margin-bottom: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .boton{
