Agrego espera de cargas del estado, modifico userList redux

--- a/src/components/admin/actividades/ActividadesLista.module.css
+++ b/src/components/admin/actividades/ActividadesLista.module.css
@@ -18,7 +18,7 @@
   border-radius: 15px;
   border-color: unset;
   font-weight: bold;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
 }
 
 .editarButton{
