Muestro cantidad de clases a reservar del usuario

--- a/src/components/user/InicioUser.module.css
+++ b/src/components/user/InicioUser.module.css
@@ -44,17 +44,21 @@
 }
 
 .Bronze{
+  border: black 1px solid;
   background-color: #9A8C12;
 }
 
 .Silver{
+  border: black 1px solid;
   background-color: #EDEDED;
 }
 
 .Gold{
+  border: black 1px solid;
   background-color: #FFCC81;
 }
 
 .Platinum{
+  border: black 1px solid;
   background-color: #BFE0DC;
 }
